Wed Jul  3 14:13:53 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* get-right.c (ports_get_right): Supply correct sync value in
 	notification request.

Mon May  6 16:33:55 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* ports.h (ports_allocate_port, ports_intern_external_port):
 	Delete obsolete declarations.
	* allocate-port.c, intern-external-port.c: Delete files.
	* Makefile (SRCS): Delete `intern-external-port.c' and
 	`allocate-port.c'.

Sun Apr 28 15:22:58 1996  Roland McGrath  <roland@delasyd.gnu.ai.mit.edu>

	* allocate-port.c: Add obsolescence link warning.
	* intern-external-port.c: Add obsolescence link warning.

Fri Mar 29 15:21:31 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* end-rpc.c (ports_end_rpc): Acquire _PORTS_LOCK before calling
	_ports_remove_notified_rpc.

Fri Mar 29 09:04:53 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* reallocate-from-external.c (ports_reallocate_from_external):
 	Require port to have a current port right.
	* reallocate-port.c (ports_reallocate_port): Likewise.

	* complete-deallocate.c (_ports_complete_deallocate): Only drop
 	port right if it isn't already null.

	* transfer-right.c: New file.
	* Makefile (SRCS): Add transfer-right.c.
	* ports.h (ports_claim_right): Doc fix.
	(ports_transfer_right): New function.

Thu Mar 28 10:47:58 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* claim-right.c (ports_claim_right): Take right out of port
	bucket.

	* manage-multithread.c (ports_manage_port_operations_multithread):
 	Fill in meaningful statuses and errors rather than just zero.
	* manage-one-thread.c (ports_manage_port_operations_one_thread):
	Likewise.

	* begin-rpc.c (ports_begin_rpc): Return EOPNOTSUPP, not EDIED, if
 	receive right is gone.

	* manage-one-thread.c (ports_manage_port_operations_one_thread):
 	Fill in default reply before doing work; we might return 0 and
 	mach_msg_server expects us to fill in a reply decently no matter
 	what.